# monochromia

./: .gitignore  README.md  colour_swap.py  dashboard.py  datetime.py  fractal_tree.py  main.py  pc_display.py  pomodoro.py  pyproject.toml  quotes.py  scratchpad.py  tab_set.py  to_do.py  weather.py
saves/: to_do.json
testing (for myself)/: features.md  scratchpad.py
widgets/: clock.py  cpu_gpu_perf.py  fractal_tree.py  pc_display.py  pomodoro.py  tab_set.py  to_do.py  weather.py
