[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "monochromia"
version = "1.0.1"
authors = [
    {name="Kirthi Siva", email="kirthisiva249@gmail.com" },
]
description = "Smart Dashboard with the most simple, minimalistic UI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "customtkinter",
    "pillow",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/KirthiSiva/monochromia"
Issues = "https://github.com/KirthiSiva/monochromia/issues"

[project.gui-scripts]
monochromia = "monochromia.main:main"

[tool.setuptools.package-data]
monochromia = ["widgets/assets/*"]

[tool.setuptools.packages.find]
include = ["monochromia*"]